[project]
name = "guardrail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ---- Core app ----
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "click==8.3.1",

    # ---- ML / LLM ----
    "torch>=2.9.1",
    "transformers>=4.57.6",
    "huggingface-hub>=0.36.0",
    "tiktoken==0.12.0",
    "regex==2026.1.15",
    "jiter==0.12.0",
    "numpy==2.4.1",

    # ---- spaCy / NLP ----
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "thinc==8.3.10",
    "srsly==2.5.2",
    "preshed==3.0.12",
    "cymem==2.0.13",
    "murmurhash==1.0.15",
    "blis==1.3.3",
    "wasabi==1.1.3",
    "catalogue==2.0.10",
    "confection==0.1.5",
    "cloudpathlib==0.23.0",
    "smart_open==7.5.0",
    "weasel==0.4.3",
    "typer-slim==0.21.1",
    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",

    # ---- PII / Presidio ----
    "presidio-analyzer==2.2.360",
    "presidio-anonymizer==2.2.360",
    "phonenumbers==9.0.22",

    # ---- Validation / typing ----
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "annotated-types==0.7.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "types-requests==2.32.4.20260107",

    # ---- HTTP stack ----
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "anyio==4.12.1",
    "h11==0.16.0",
    "sniffio==1.3.1",
    "urllib3==2.6.3",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "certifi==2026.1.4",
    "requests-file==3.0.1",
    "filelock==3.20.3",

    # ---- Security / crypto ----
    "cryptography==44.0.3",
    "cffi==2.0.0",
    "pycparser==2.23",

    # ---- Azure ----
    "azure-core==1.38.0",
    "azure-common==1.1.28",
    "azure-search-documents==11.6.0",
    "isodate==0.7.2",

    # ---- Utils ----
    "tqdm==4.67.1",
    "cached-property==2.0.1",
    "PyPDF2==3.0.1",
    "distro==1.9.0",
    "packaging==25.0",
    "PyYAML==6.0.3",
    "tldextract==5.3.1",
    "wrapt==2.0.1",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",

    # ---- Portkey ----
    "portkey-ai==2.1.0",
]